@@ -1,0 +1,4 @@
+EXPLAIN
+SELECT x.* FROM SRCPART x WHERE x.ds = 2008-04-08 LIMIT 10;
+
+SELECT x.* FROM SRCPART x WHERE x.ds = 2008-04-08 LIMIT 10;
